--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
